--- a/index.html
+++ b/index.html
@@ -1,2 +1,52 @@
+<html>
+<body>
+
+<script>
+
+function setCookie(cname,cvalue,exdays) {
+  var d=new Date();
+  document.write(" cn: " + cname + " cv: " + cvalue + " ed: " + exdays);
+  d.setTime(d.getTime()+(exdays*24*60*60*1000));
+  var expires = "expires=" + d.toUTCString();
+  document.write(" ex " + expires) ;
+  expires="";
+  document.cookie=cname + "=" + cvalue + ";" + expires + ";path=/";
+  document.cookie = cname + "=" + cvalue;
+  document.write(" " + cname + "=" + cvalue);
+  document.write(document.cookie);
+  var x = document.cookie;
+  document.write("\nCookies here: " + x);
+}
+
+function getCookie(cname) {
+  var name=cname+"=";
+  var ca=document.cookie.split(';');
+  for(var i=0;i<ca.length;i++) {
+    var c=ca[i];
+    if (c.indexOf(name) == 0) {
+      return c.substring(name.length,c.length);
+    }
+  }
+  return "";
+}
+
+function checkCookie() {
+  document.write("ce: " + navigator.cookieEnabled);
+  var user=getCookie("username");
+  if (user!="") { alert("Welcome again "+user); }
+  else { user=prompt("Please enter your name:","");
+    document.write(" " + user);
+    setCookie("username",user,365);
+  }
+}
+
+checkCookie();
+document.cookie;
+
+</script>
+
 <h1>hello world</h1>
+<p> </p>
+</body>
+</html>
 
