--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@ function checkCookie() {
   else { user=prompt("Please enter your name:","");
     setCookie("username",user,365);
   }
-  var x = document.cookie;
-  document.write("\nCookies here: " + x);
+  document.write("\nCookies here: " + document.cookie);
 }
 
 checkCookie();
